# myframe

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CPPLINT.cfg  Config.cmake.in  LICENSE  README.md  cpplint.bash
.github/workflows/: android.yml  cmake.yml  codestyle.yml  linux.yml  macos.yml  windows.yml
3rd/: CMakeLists.txt  README.md
MyFrame/: CMakeLists.txt  MyApp.cpp  MyApp.h  MyCUtils.c  MyCUtils.h  MyCommon.h  MyContext.cpp  MyContext.h  MyEvent.h  MyFrame.cpp  MyFrame.h  MyHandleMgr.cpp  MyHandleMgr.h  MyList.h  MyLog.cpp  MyLog.h  MyMain.cpp  MyModule.h  MyModules.cpp  MyModules.h  MyMsg.cpp  MyMsg.h  MyObj.cpp  MyObj.h  MySock.cpp  MySock.h  MySocksMgr.cpp  MySocksMgr.h  MyThread.cpp  MyThread.h  MyTimerTask.cpp  MyTimerTask.h  MyWorker.cpp  MyWorker.h
Service/: CMakeLists.txt  MyTCPSockTest.cpp  MyTestService.cpp  MyTestService2.cpp  MyTestService3.cpp  protobuf_utils.cpp  protobuf_utils.h
cmake/: InstallingConfigs.cmake  Packing.cmake
conf/: sys.json
doc/: TODOLIST.md  debug.md  development_guide.md  version_release.md
docker/: README.md  dev.dockerfile  docker_build.bash  ubuntu2004.dockerfile  ubuntu2004.sourcelist  ubuntu2204.sourcelist  ubuntu2204_x86.sourcelist
examples/: CMakeLists.txt  ExampleActorConcurrent.cpp  ExampleActorHelloWorld.cpp  ExampleActorHelloWorld.json  ExampleActorSerial.cpp  ExampleActorTimer.cpp  ExampleWorkerActorInteractive.cpp  ExampleWorkerActorInteractive.json  ExampleWorkerInteractiveWith3rdFrame.cpp  ExampleWorkerInteractiveWith3rdFrame.json  ExampleWorkerPublish.cpp  ExampleWorkerPublish.json  ExampleWorkerTalk.cpp  MyDemo.cpp  MyDemo.json  MyEchoSrv.cpp  MyTestConcurrent.cpp  MyTestConcurrent.json  MyTestPublishWorker.cpp  MyTestPublishWorker.json  MyTestSerial.cpp  MyTestSerial.json  MyTestService.cpp  MyTestTalkWorker.cpp  MyTestTalkWorker.json  MyTestTcpSrv.cpp  MyTestTimer.cpp  MyTestTimer.json  MyTestWorker.cpp  MyTestWorker.json  config.json  example_actor_concurrent.cpp  example_actor_concurrent.json  example_actor_helloworld.cpp  example_actor_helloworld.json  example_actor_pub_sub.cpp  example_actor_pub_sub.json  example_actor_serial.cpp  example_actor_serial.json  example_actor_subscribe.cpp  (+25 more)
launcher/: CMakeLists.txt  cmdline.h  launcher.cpp  launcher.cpp.in  launcher_config.h.in  module_argument.cpp  module_argument.h
launcher/conf/: myframe.json  sys.json
misc/: CMakeLists.txt  start_myframe.bash
myframe/: CMakeLists.txt  Config.cmake.in  MyActor.cpp  MyActor.h  MyApp.cpp  MyApp.h  MyCUtils.c  MyCUtils.h  MyCommon.cpp  MyCommon.h  MyContext.cpp  MyContext.h  MyContextManager.cpp  MyContextManager.h  MyEvent.cpp  MyEvent.h  MyEventConn.cpp  MyEventConn.h  MyEventConnManager.cpp  MyEventConnManager.h  MyFlags.cpp  MyFlags.cpp.in  MyFlags.h  MyFrame.h  MyHandleManager.cpp  MyHandleManager.h  MyHandleMgr.cpp  MyHandleMgr.h  MyList.cpp  MyList.h  MyLog.cpp  MyLog.h  MyMain.cpp  MyModLib.cpp  MyModLib.h  MyModManager.cpp  MyModManager.h  MyModule.cpp  MyModule.h  MyModules.cpp  (+85 more)
myframe/platform/: cmd_channel_generic.h  cmd_channel_linux.h  poller_generic.h  poller_linux.h  shared_library_linux.h  shared_library_win.h
pro/: MyFrame.pri  MyFrame.pro  MyFrameTest.pro
python/: CMakeLists.txt  example.py  example_myframe.py  launcher.py  py_test.h  pyactor.h  pyactor_wrap.h  pyapp.h  pymsg.h  pymyframe.h
python/examples/: CMakeLists.txt  example_myframe_0.py  example_myframe_1_1a.py  example_myframe_1_2a.py
python/swig/: pymyframe.i  test.i
template/: template.json
templates/: CMakeLists.txt  template.cpp  template.json
templates/cmake/: Packing.cmake
test/: CMakeLists.txt  MyCUtils_test.cpp  MyEvent_test.cpp  MyFrame_test.cpp  MyList_test.cpp  MyLog_test.cpp  MyObj_test.cpp  MyThread_test.cpp  actor_run_queue_test.cpp  app_get_all_addr_test.cpp  app_send_req_test.cpp  app_send_test.cpp  app_test.cpp  common_test.cpp  hello_test.cpp  main.cpp  performance_test.cpp  performance_test.cpp.in  performance_test_config.h.in  performance_trans100_fullspeed_test.cpp  performance_trans10_cost_test.cpp  performance_trans1_cost_test.cpp  performance_trans1_fullspeed_test.cpp  performance_trans20_fullspeed_test.cpp  test_actor_run_queue.cpp  test_app_send.cpp  test_app_send_req.cpp  test_arguments.cpp  test_common.cpp  test_config.h.in  test_hello.cpp  test_performance_trans100_fullspeed.cpp  test_performance_trans10_cost.cpp  test_performance_trans1_cost.cpp  test_performance_trans1_fullspeed.cpp  test_performance_trans20_fullspeed.cpp
test/test_data/: test_arguments.json
tools/: gen_mod_proj.py  myframe_setup.py  myframe_setup.sh  myframe_tool.py  setup.sh
